#2: implemented add connection operation
